Added RefundFee, Salary for Teacher, roomChanging functions. And token repairing problems